# asistente-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai-assistant-checklist-por-archivo.md  architecture.md  checklist.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/: bootstrap.py  container.py  lifecycle.py  main.py
automation/: jobs.py  reminders.py  scheduler.py  tasks_queue.py
cli/: main.py
configs/: app.yml  llm.yml  memory.yml  security.yml  voice.yml
core/: agent.py  assistant.py  context.py  events.py  executor.py  planner.py  prompts.py  state_manager.py
docs/: architecture.md  platform-support.md  tool-development.md
host/: detector.py  profile.py  registry.py
interfaces/: voice_controller.py
llm/: base.py  message.py  router.py
memory/: embeddings.py  long_term.py  manager.py  short_term.py  summarizer.py
runtime/: daemon.py  health.py  instance_lock.py  paths.py  shutdown.py  signals.py
scripts/: package.py  package.sh
security/: audit.py  confirmation.py  permissions.py  policy.py  sandbox.py
services/: base.py  launchd.py  manager.py  systemd.py  windows_service.py
tests/: test_core.py  test_host.py  test_llm.py  test_memory.py  test_new_features.py  test_runtime.py  test_tools.py  test_vision.py  test_web_tools.py
tools/: base.py  clipboard_utils.py  manifest.py  registry.py
vision/: camera.py  manager.py  screen.py
voice/: manager.py
(+140 files in other folders)
