# This file defines the package metadata and dependencies for the AI assistant.
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "0.1.0"
description = "AI assistant project skeleton."
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
    "python-dotenv>=1.0.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "python-docx>=0.8.11",
    "reportlab>=4.0.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "pyaudio>=0.2.13",
    "edge-tts>=6.1.9",
    "elevenlabs>=0.2.27",
    "yt-dlp>=2023.7.6",
    "pillow>=9.5.0",
    "lxml>=4.9.0",
    "faster-whisper>=0.7.0",
    "vosk>=0.3.44"
]

[project.scripts]
rbot = "cli.main:main"


[tool.setuptools]
packages = [
    "app",
    "llm",
    "cli",
    "core",
    "host",
    "voice",
    "vision",
    "memory",
    "runtime",
    "security",
    "tools",
    "services",
    "automation",
    "interfaces"
]